# tangle-coral

./: .gitattributes  .gitignore  Dockerfile  GoogleCloud.md  README.md  index.html  notes  pyproject.toml  requirements.txt
data/: .gitattributes  .gitignore  Alignment.twb  Pfam-A.clans.tsv  Protein Classification.twb  custom_module_defs.csv  custom_module_ko.tsv  custom_modules.tsv  genomes.csv  genomes.tsv  genomes_algae.txt  genomes_coral.txt  genomes_coral_ref.txt  genomes_detect.txt  genomes_new.txt  genomes_ref.txt  genomes_related.txt  ko.tsv  ko_pfam.tsv  ko_thresholds.tsv  m00001_query.faa  m00009_query.faa  module_defs.csv  module_ko.tsv  modules.tsv  pfam_go_simple.tsv  x90001.hmm  x90001_query.faa
examples/: K00025.faa  m00009.faa
experiments/: README.md
helpers/: gls
kegg-downloads/: .gitignore  README.md
ncbi-downloads/: .gitignore  README.md
needle/: blast.py  classify.py  detect.py  duckdb.py  gff.py  hits.py  hmm.py  io.py  kegg.py  match.py  ncbi-download.py  ncbi.py  ortholog.py  seq.py
pages/: .gitignore  index.html  index.js  ko.html  ko.js  modules.tsv  styles.css  utils.js
pfam-downloads/: .gitignore
profiles/: mt_MnSOD_cnidaria.hmm  mt_MnSOD_cnidaria_thresholds.tsv  sp_MnSOD_cnidaria.hmm  sp_MnSOD_cnidaria_thresholds.tsv
scripts/: blast-genome.py  classify-ncbi.py  classify.py  cluster-dir  cluster-faa.py  cluster-ko  compare-gff-with-match.py  defaults.py  export-protein-results.py  fetch-genomes.py  fetch-kegg-module-ko.py  generate-module-fasta.py  generate-msas  hmmalign-ko  hmmscan-genome.py  hmmsearch-genome.py  mk-msa-vis  (+8 more)
(+110 files in other folders)
